Fix time formatting in graph tooltips. Better help button alignment in section titles. Continuous recording in queue and topic statistics tabs. Improve graph data trimming.

--- a/src/app/shared/components/help-button/shared-help-button.component.scss
+++ b/src/app/shared/components/help-button/shared-help-button.component.scss
@@ -1,4 +1,9 @@
+:host {
+  display: inline-flex;
+  align-items: center;
+}
+
 .HelpButton {
   cursor: pointer;
-  margin-right: 0.25em;
+  margin-right: 8px;
 }
